--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,7 +1,7 @@
 <%- include("header") -%>
         <div class="box" id="heading">
             <h1>
-                Today is <%= listTitle %>
+                 <%= listTitle %>
             </h1>
         </div>
         <div class="box">
